# PL0-Compiler

./: CMakeLists.txt  README.md
app/: App.cpp  Main.cpp  MainApp.cpp  Test.cpp  TestApp.cpp
ext/CL0-Interpreter/: CMakeLists.txt
ext/CL0-Interpreter/include/: code.h  opcode.h
ext/CL0-Interpreter/src/: code.h  debug.h  main.c
res/pl0-files/: sc1.pl0
res/pl0examples/: Example_2.pl0  Example_3.pl0
src/pl0compiler/: Compiler.cpp  Compiler.hpp  Generator.cpp  Generator.hpp  Graph.cpp  Graph.hpp  IRCodeCreator.cpp  IRCodeCreator.hpp  IRCreator.cpp  IRCreator.hpp  Symbols.cpp  Symbols.hpp  SyntaxGraph.cpp  SyntaxGraph.hpp  Tokenizer.cpp  Tokenizer.hpp
src/pl0compiler/common/: Exception.cpp  Exception.hpp  FileIO.cpp  FileIO.hpp  Logger.cpp  Logger.hpp  Token.cpp  Token.hpp  Utils.cpp  Utils.hpp
src/pl0compiler/compiler/: CompEx.cpp  CompEx.hpp  Generator.cpp  Graph.hpp  ILGen.hpp  Token.cpp  Token.hpp  Tokenizer.cpp  Tokenizer.hpp
test/pl0compiler/: CompilerTest.cpp  CompilerTest.hpp
test/pl0compilertest/: CompilerTest.cpp  CompilerTest.hpp
